--- a/react-app/src/components/Login/Login.css
+++ b/react-app/src/components/Login/Login.css
@@ -1,18 +1,21 @@
 .Login_body {
     margin:0;
     padding:0;
-    font-family: sans-serif;
     height: 100vh;
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .login-box {
-    position: absolute;
-    top: 55%;
-    left: 50%;
+    /* position: absolute;
+    top: 50%;
+    left: 50%; */
     width: 400px;
     padding: 40px;
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
     background: rgb(2, 40, 64);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.644);
